# reel

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  readme.md  run.sh
src/: decode.cc  decode.h  main.c  main.cc  main.rs  player.cc  player.h  utils.h
